--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
   <title>FTombesi | Personal Portfolio</title>
 </head>
 <body>
+  <nav>
+    <a href="https://ftportfolio.vercel.app/">
+      <img src="assets/img/logo(purple)_NEW.png" alt="FTombesi" />
+    </a>
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about">About me</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#projects">Projects</a></li>
+    </ul>
+    <button>Contact me</button>
+    <button id="menuButton" onclick="openMenu()">
+      <i class="bx bx-menu"></i>
+    </button>
+  </nav>
   <script src="script.js"></script>
 </body>
 </html>
