--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <nav>
     <a href="https://ftportfolio.vercel.app/">
-      <img src="assets/img/logo(purple)_NEW.png" alt="FTombesi" />
+      <img src="assets/img/logo_ft.png" alt="FTombesi" />
     </a>
     <ul>
       <li><a href="#home">Home</a></li>
