--- a/index.html
+++ b/index.html
@@ -12,17 +12,32 @@
     <a href="https://ftportfolio.vercel.app/">
       <img src="assets/img/logo_ft.png" alt="FTombesi" />
     </a>
-    <ul>
-      <li><a href="#home">Home</a></li>
-      <li><a href="#about">About me</a></li>
-      <li><a href="#skills">Skills</a></li>
-      <li><a href="#projects">Projects</a></li>
-    </ul>
-    <button>Contact me</button>
+    <div class="nav-links">
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About me</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#projects">Projects</a></li>
+      </ul>
+      <button>Contact me</button>
+    </div>
     <button id="menuButton" onclick="openMenu()">
       <i class="bx bx-menu"></i>
     </button>
   </nav>
+  <div class="home" id="home">
+    <div class="left">
+      <img src="assets/img/portrait_me.png" alt="FTombesi">
+    </div>
+    <div class="right">
+      <h5>Hi, my name is Facundo Tombesi</h5>
+      <h3>I am a <span>multimedia designer</span> and a <span>fullstack developer</span></h3>
+      <div class="home-buttons">
+        <button>LinkedIn</button>
+        <button>GitHub</button>
+      </div>
+    </div>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
