--- a/index.html
+++ b/index.html
@@ -31,10 +31,87 @@
     </div>
     <div class="right">
       <h5>Hi, my name is Facundo Tombesi</h5>
+      <hr color="#5400CF" width="30%" />
       <h3>I am a <span>multimedia designer</span> and a <span>fullstack developer</span></h3>
       <div class="home-buttons">
         <button>LinkedIn</button>
         <button>GitHub</button>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="skills" id="skills">
+    <h5>Tech skills</h5>
+    <hr color="#5400CF" width="10%" />
+    <div class="skills-items">
+      <div class="skill">
+        <img class="icon" src="assets/icons/skillJAVASCRIPT_new.png" alt="JavaScript" />
+        <p>JavaScript</p>
+      </div>
+      <div class="skill">
+        <img class="icon" src="assets/icons/skillREACT_new.png" alt="JavaScript" />
+        <p>ReactJs</p>
+      </div>
+      <div class="skill">
+        <img class="icon" src="assets/icons/skillNEXTJS_new.png" alt="JavaScript" />
+        <p>NextJs</p>
+      </div>
+      <div class="skill">
+        <img class="icon" src="assets/icons/skillREDUX_new.png" alt="JavaScript" />
+        <p>Redux</p>
+      </div>
+      <div class="skill">
+        <img class="icon" src="assets/icons/skillNODEJS_new.png" alt="JavaScript" />
+        <p>NodeJs</p>
+      </div>
+      <div class="skill">
+        <img class="icon" src="assets/icons/skillEXPRESS_new.png" alt="JavaScript" />
+        <p>Express</p>
+      </div>
+      <div class="skill">
+        <img class="icon" src="assets/icons/skillSEQUELIZE_new.png" alt="JavaScript" />
+        <p>Sequelize</p>
+      </div>
+      <div class="skill">
+        <img class="icon" src="assets/icons/skillPOSTGRESQL_new.png" alt="JavaScript" />
+        <p>PostgreSQL</p>
+      </div>
+      <div class="skill">
+        <img class="icon" src="assets/icons/skillHTML_new.png" alt="JavaScript" />
+        <p>HTML5</p>
+      </div>
+      <div class="skill">
+        <img class="icon" src="assets/icons/skillCSS_new.png" alt="JavaScript" />
+        <p>CSS</p>
+      </div>
+      <div class="skill">
+        <img class="icon" src="assets/icons/skillTAILWINDCSS_new.png" alt="JavaScript" />
+        <p>Tailwind CSS</p>
+      </div>
+    </div>
+    <h5>Design skills</h5>
+    <hr color="#5400CF" width="10%" />
+    <div class="skills-items">
+      <div class="skill">
+        <img class="icon" src="assets/icons/skillAFTEREFFECTS_new.png" alt="JavaScript" />
+        <p>Adobe After Effects</p>
+      </div>
+      <div class="skill">
+        <img class="icon" src="assets/icons/skillILLUSTRATOR_new.png" alt="JavaScript" />
+        <p>Adobe Illustrator</p>
+      </div>
+      <div class="skill">
+        <img class="icon" src="assets/icons/skillPREMIEREPRO_new.png" alt="JavaScript" />
+        <p>Adobe Premiere Pro</p>
+      </div>
+      <div class="skill">
+        <img class="icon" src="assets/icons/skillADOBEXD_new.png" alt="JavaScript" />
+        <p>Adobe XD</p>
+      </div>
+      <div class="skill">
+        <img class="icon" src="assets/icons/skillFIGMA_new.png" alt="JavaScript" />
+        <p>Figma</p>
       </div>
     </div>
   </div>
