--- a/index.html
+++ b/index.html
@@ -34,13 +34,30 @@
       <hr color="#5400CF" width="30%" />
       <h3>I am a <span>multimedia designer</span> and a <span>fullstack developer</span></h3>
       <div class="home-buttons">
-        <button>LinkedIn</button>
-        <button>GitHub</button>
+        <a href="https://www.linkedin.com/in/facundotombesi/" target="_blank" rel="noreferrer">
+          <button>LinkedIn</button>
+        </a>
+        <a href="https://github.com/FacuTombesi" target="_blank" rel="noreferrer">
+          <button>GitHub</button>
+        </a>
       </div>
     </div>
   </div>
-
-
+  <div class="about">
+    <div class="about-me">
+      <h5>About me</h5>
+      <hr color="#5400CF" width="10%" />
+      <p>
+        Hi! My name is Facundo Tombesi, from Argentina. I'm a Multimedia Designer and Full Stack Developer. I got my Multimedia Designer degree on 2018 and ever since I've been working as a freelance designer, doing web design, logo design and personal business cards for my clients. But I wanted to grow even more and do more than just design web sites, I wanted to be able to develop them as well.
+      </p>
+      <p>
+        So, on october 2022, I started studying for Full Stack Developer at SoyHenry and 4 months later I got my Full Stack Developer certificate. Now I'm looking to work in a place where I can put to test my skills both as a designer and a developer. I'm still a junior developer and I'm still learning but with time I'll become a true professional.
+      </p>
+      <a href="https://drive.google.com/file/d/12UyadJh4R7uz-FmqrJ4pfeTLpz29UFfZ/view?usp=sharing" target="_blank" rel="noreferrer">
+        <button>Download my CV</button>
+      </a>
+    </div>
+  </div>
   <div class="skills" id="skills">
     <h5>Tech skills</h5>
     <hr color="#5400CF" width="10%" />
