--- a/index.html
+++ b/index.html
@@ -132,6 +132,82 @@
       </div>
     </div>
   </div>
+  <div class="projects" id="projects">
+    <div class="header">
+      <div class="info">
+        <h5>Latest projects</h5>
+        <hr color="#5400CF" width="10%" />
+        <div class="info-link">
+          <h3>My projects</h3>
+          <a href="https://github.com/FacuTombesi" target="_blank" rel="noreferrer">
+            <button>GitHub</button>
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="projects-items">
+      <div class="project">
+        <img src="assets/thumbnails/budgettracker_project-screenshots-1.png" alt="Food PI" />
+        <div class="info">
+          <h4>Budget Tracker</h4>
+          <p>Budget Tracker is an app where you can keep track of your budgets and expenses. You can create new budgets, add expenses to specific budgets, delete budgets and keep track of your total expenses.</p>
+          <div class="info-links">
+            <a href="https://ftbudgettracker.vercel.app/" target="_blank">
+              Deploy <i class="bx bx-link-external"></i>
+            </a>
+            <a href="https://github.com/FacuTombesi/BudgetTracker" target="_blank">
+              Repo <i class="bx bx-link-external"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="project">
+        <img src="assets/thumbnails/weatherapp_project-screenshots-1.png" alt="Food PI" />
+        <div class="info">
+          <h4>Weather App</h4>
+          <p>Weather App with geolocation, daily forecasts and hourly temperatures. Weather information includes: current temperature, weather icon, max and min temperatures, wind speed and rain probability.</p>
+          <div class="info-links">
+            <a href="https://ftweatherapp.vercel.app/" target="_blank">
+              Deploy <i class="bx bx-link-external"></i>
+            </a>
+            <a href="https://github.com/FacuTombesi/WeatherApp" target="_blank">
+              Repo <i class="bx bx-link-external"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="project">
+        <img src="assets/thumbnails/voyhenry_pf-screenshots-1.png" alt="Food PI" />
+        <div class="info">
+          <h4>voyHENRY</h4>
+          <p>Group project we made for the HENRY fullstack developer course. The project is a social app focused for HENRY students where they can create plans or social events to meet each other, get to know, do some co-working or just have fun.</p>
+          <div class="info-links">
+            <a href="https://pf-voy-henry.vercel.app/" target="_blank">
+              Deploy <i class="bx bx-link-external"></i>
+            </a>
+            <a href="https://github.com/Gbw699/PF-VoyHenry" target="_blank">
+              Repo <i class="bx bx-link-external"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="project">
+        <img src="assets/thumbnails/food_pi-screenshots-1.png" alt="Food PI" />
+        <div class="info">
+          <h4>Food PI</h4>
+          <p>Individual project for the HENRY fullstack developer course. The project is a recipe book where you can browse, filter and create your own recipes.</p>
+          <div class="info-links">
+            <a href="https://pi-food-ftombesi.vercel.app/" target="_blank">
+              Deploy <i class="bx bx-link-external"></i>
+            </a>
+            <a href="https://github.com/FacuTombesi/PI-Food" target="_blank">
+              Repo <i class="bx bx-link-external"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
