--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <nav>
     <a href="https://ftportfolio.vercel.app/">
-      <img src="assets/img/logo_ft.png" alt="FTombesi" />
+      <img src="assets/img/logo_ft_full.png" alt="FTombesi" />
     </a>
     <div class="nav-links">
       <ul>
@@ -43,7 +43,7 @@
       </div>
     </div>
   </div>
-  <div class="about">
+  <div class="about" id="about">
     <div class="about-me">
       <h5>About me</h5>
       <hr color="#5400CF" width="10%" />
@@ -208,6 +208,25 @@
       </div>
     </div>
   </div>
+  <footer>
+    <div class="logo">
+      <a href="https://ftportfolio.vercel.app/">
+        <img src="assets/img/logo_ft.png" alt="FTombesi" />
+      </a>
+    </div>
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#">Projects</a></li>
+    </ul>
+    <div class="social-links">
+      <a href="#">
+        <img class="github" src="assets/icons/iconGITHUB(black).png" alt="GitHub" />
+      </a>
+      <a href="#">
+        <img class="linkedin" src="assets/icons/iconLINKEDIN(black).png" alt="LinkedIn" />
+      </a>
+    </div>
+  </footer>
   <script src="script.js"></script>
 </body>
 </html>
