favicon added / script added

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" href="assets/img/favicon.png">
   <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
   <link rel="stylesheet" href="style.css">
   <title>FTombesi | Personal Portfolio</title>
@@ -10,7 +11,7 @@
 <body>
   <nav>
     <a href="https://ftportfolio.vercel.app/">
-      <img src="assets/img/logo_ft_full.png" alt="FTombesi" />
+      <img class="logo" src="assets/img/logo_ft_full.png" alt="FTombesi" />
     </a>
     <div class="nav-links">
       <ul>
@@ -22,7 +23,7 @@
       <button>Contact me</button>
     </div>
     <button id="menuButton" onclick="openMenu()">
-      <i class="bx bx-menu"></i>
+      <i class='bx bx-menu'></i>
     </button>
   </nav>
   <div class="home" id="home">
@@ -45,22 +46,22 @@
   </div>
   <div class="about" id="about">
     <div class="about-me">
-      <h5>About me</h5>
-      <hr color="#5400CF" width="10%" />
+      <h5>&lt;about_me<span>/</span>&gt;</h5>
+      <hr color="#5400CF" width="5%" />
       <p>
         Hi! My name is Facundo Tombesi, from Argentina. I'm a Multimedia Designer and Full Stack Developer. I got my Multimedia Designer degree on 2018 and ever since I've been working as a freelance designer, doing web design, logo design and personal business cards for my clients. But I wanted to grow even more and do more than just design web sites, I wanted to be able to develop them as well.
       </p>
       <p>
         So, on october 2022, I started studying for Full Stack Developer at SoyHenry and 4 months later I got my Full Stack Developer certificate. Now I'm looking to work in a place where I can put to test my skills both as a designer and a developer. I'm still a junior developer and I'm still learning but with time I'll become a true professional.
       </p>
-      <a href="https://drive.google.com/file/d/12UyadJh4R7uz-FmqrJ4pfeTLpz29UFfZ/view?usp=sharing" target="_blank" rel="noreferrer">
+      <a href="https://drive.google.com/file/d/14VLHBzQ5zRh3OjmGFf2RXHG1JYuJOmXo/view?usp=sharing" target="_blank" rel="noreferrer">
         <button>Download my CV</button>
       </a>
     </div>
   </div>
   <div class="skills" id="skills">
-    <h5>Tech skills</h5>
-    <hr color="#5400CF" width="10%" />
+    <h5>&lt;tech_skills<span>/</span>&gt;</h5>
+    <hr color="#5400CF" width="5%" />
     <div class="skills-items">
       <div class="skill">
         <img class="icon" src="assets/icons/skillJAVASCRIPT_new.png" alt="JavaScript" />
@@ -107,8 +108,8 @@
         <p>Tailwind CSS</p>
       </div>
     </div>
-    <h5>Design skills</h5>
-    <hr color="#5400CF" width="10%" />
+    <h5>&lt;design_skills<span>/</span>&gt;</h5>
+    <hr color="#5400CF" width="5%" />
     <div class="skills-items">
       <div class="skill">
         <img class="icon" src="assets/icons/skillAFTEREFFECTS_new.png" alt="JavaScript" />
@@ -135,12 +136,11 @@
   <div class="projects" id="projects">
     <div class="header">
       <div class="info">
-        <h5>Latest projects</h5>
+        <h5>&lt;latest_projects<span>/</span>&gt;</h5>
         <hr color="#5400CF" width="10%" />
         <div class="info-link">
-          <h3>My projects</h3>
           <a href="https://github.com/FacuTombesi" target="_blank" rel="noreferrer">
-            <button>GitHub</button>
+            All projects <i class="bx bx-link-external"></i>
           </a>
         </div>
       </div>
