external links updated

--- a/index.html
+++ b/index.html
@@ -216,14 +216,14 @@
     </div>
     <ul>
       <li><a href="#home">Home</a></li>
-      <li><a href="#">Projects</a></li>
+      <!-- <li><a href="#">Projects</a></li> -->
     </ul>
     <div class="social-links">
-      <a href="#">
-        <img class="github" src="assets/icons/iconGITHUB(black).png" alt="GitHub" />
-      </a>
-      <a href="#">
+      <a href="https://www.linkedin.com/in/facundotombesi/" target="_blank" rel="noreferrer">
         <img class="linkedin" src="assets/icons/iconLINKEDIN(black).png" alt="LinkedIn" />
+      </a>
+      <a href="https://github.com/FacuTombesi" target="_blank" rel="noreferrer">
+        <img class="github" src="assets/icons/iconGITHUB(black).png" alt="GitHub" />
       </a>
     </div>
   </footer>
