projects page button added / added hover to project cards info / fixed smaller screen styles

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     </div>
     <div class="projects-items">
       <div class="project">
-        <img src="assets/thumbnails/budgettracker_project-screenshots-1.png" alt="Food PI" />
+        <img src="assets/thumbnails/budgettracker_project-screenshots-1.png" alt="Budget Tracker" />
         <div class="info">
           <h4>Budget Tracker</h4>
           <p>Budget Tracker is an app where you can keep track of your budgets and expenses. You can create new budgets, add expenses to specific budgets, delete budgets and keep track of your total expenses.</p>
@@ -162,7 +162,7 @@
         </div>
       </div>
       <div class="project">
-        <img src="assets/thumbnails/weatherapp_project-screenshots-1.png" alt="Food PI" />
+        <img src="assets/thumbnails/weatherapp_project-screenshots-1.png" alt="Weather App" />
         <div class="info">
           <h4>Weather App</h4>
           <p>Weather App with geolocation, daily forecasts and hourly temperatures. Weather information includes: current temperature, weather icon, max and min temperatures, wind speed and rain probability.</p>
@@ -177,7 +177,7 @@
         </div>
       </div>
       <div class="project">
-        <img src="assets/thumbnails/voyhenry_pf-screenshots-1.png" alt="Food PI" />
+        <img src="assets/thumbnails/voyhenry_pf-screenshots-1.png" alt="voyHenry" />
         <div class="info">
           <h4>voyHENRY</h4>
           <p>Group project we made for the HENRY fullstack developer course. The project is a social app focused for HENRY students where they can create plans or social events to meet each other, get to know, do some co-working or just have fun.</p>
@@ -191,22 +191,10 @@
           </div>
         </div>
       </div>
-      <div class="project">
-        <img src="assets/thumbnails/food_pi-screenshots-1.png" alt="Food PI" />
-        <div class="info">
-          <h4>Food PI</h4>
-          <p>Individual project for the HENRY fullstack developer course. The project is a recipe book where you can browse, filter and create your own recipes.</p>
-          <div class="info-links">
-            <a href="https://pi-food-ftombesi.vercel.app/" target="_blank">
-              Deploy <i class="bx bx-link-external"></i>
-            </a>
-            <a href="https://github.com/FacuTombesi/PI-Food" target="_blank">
-              Repo <i class="bx bx-link-external"></i>
-            </a>
-          </div>
-        </div>
-      </div>
     </div>
+    <a href="/pages/projects.html" rel="noreferrer">
+      <button>Browse all my projects</button>
+    </a>
   </div>
   <footer>
     <div class="logo">
@@ -216,7 +204,7 @@
     </div>
     <ul>
       <li><a href="#home">Home</a></li>
-      <!-- <li><a href="#">Projects</a></li> -->
+      <li><a href="/pages/projects.html">All Projects</a></li>
     </ul>
     <div class="social-links">
       <a href="https://www.linkedin.com/in/facundotombesi/" target="_blank" rel="noreferrer">
