contact page added / sendMail.js added for contact form / styles fixed for contact page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         <li><a href="#skills">Skills</a></li>
         <li><a href="#projects">Projects</a></li>
       </ul>
-      <button>Contact me</button>
+      <a href="/pages/contact.html">
+        <button>Contact me</button>
+      </a>
     </div>
     <button id="menuButton" onclick="openMenu()">
       <i class='bx bx-menu'></i>
@@ -139,7 +141,7 @@
         <h5>&lt;latest_projects<span>/</span>&gt;</h5>
         <hr color="#5400CF" width="10%" />
         <div class="info-link">
-          <a href="https://github.com/FacuTombesi" target="_blank" rel="noreferrer">
+          <a href="https://github.com/FacuTombesi?tab=repositories" target="_blank" rel="noreferrer">
             All projects <i class="bx bx-link-external"></i>
           </a>
         </div>
@@ -205,6 +207,7 @@
     <ul>
       <li><a href="#home">Home</a></li>
       <li><a href="/pages/projects.html">All Projects</a></li>
+      <li><a href="/pages/contact.html">Contact</a></li>
     </ul>
     <div class="social-links">
       <a href="https://www.linkedin.com/in/facundotombesi/" target="_blank" rel="noreferrer">
