--- a/pages/projects.html
+++ b/pages/projects.html
@@ -16,8 +16,11 @@
     <div class="nav-links">
       <ul>
         <li><a href="../index.html">Home</a></li>
+        <li><a href="projects.html">All Projects</a></li>
       </ul>
-      <button>Contact me</button>
+      <a href="/pages/contact.html">
+        <button>Contact me</button>
+      </a>
     </div>
     <button id="menuButton" onclick="openMenu()">
       <i class='bx bx-menu'></i>
@@ -151,6 +154,8 @@
     </div>
     <ul>
       <li><a href="../index.html">Home</a></li>
+      <li><a href="projects.html">All Projects</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
     <div class="social-links">
       <a href="https://www.linkedin.com/in/facundotombesi/" target="_blank" rel="noreferrer">
@@ -161,6 +166,6 @@
       </a>
     </div>
   </footer>
-  <script src="script.js"></script>
+  <script src="../script.js"></script>
 </body>
 </html>
