updated home page projects

--- a/index.html
+++ b/index.html
@@ -149,6 +149,21 @@
     </div>
     <div class="projects-items">
       <div class="project">
+        <img src="assets/thumbnails/neowyze_challenge-screeshots-1.png" alt="Neowyze Challenge" />
+        <div class="info">
+          <h4>Neowyze Challenge</h4>
+          <p>Challenge for the "Frontend Developer Junior" job offer. This app is about Star Wars and its purpose is to make use of the Star Wars api, SWAPI, to make a glosary of the original 6 movies and its characters. Made with Next.JS and React.JS.</p>
+          <div class="info-links">
+            <a href="https://ft-neowyze-challenge.vercel.app/" target="_blank">
+              Deploy <i class="bx bx-link-external"></i>
+            </a>
+            <a href="https://github.com/FacuTombesi/neowyze-challenge" target="_blank">
+              Repo <i class="bx bx-link-external"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="project">
         <img src="assets/thumbnails/budgettracker_project-screenshots-1.png" alt="Budget Tracker" />
         <div class="info">
           <h4>Budget Tracker</h4>
@@ -173,21 +188,6 @@
               Deploy <i class="bx bx-link-external"></i>
             </a>
             <a href="https://github.com/FacuTombesi/WeatherApp" target="_blank">
-              Repo <i class="bx bx-link-external"></i>
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="project">
-        <img src="assets/thumbnails/voyhenry_pf-screenshots-1.png" alt="voyHenry" />
-        <div class="info">
-          <h4>voyHENRY</h4>
-          <p>Group project we made for the HENRY fullstack developer course. The project is a social app focused for HENRY students where they can create plans or social events to meet each other, get to know, do some co-working or just have fun.</p>
-          <div class="info-links">
-            <a href="https://pf-voy-henry.vercel.app/" target="_blank">
-              Deploy <i class="bx bx-link-external"></i>
-            </a>
-            <a href="https://github.com/Gbw699/PF-VoyHenry" target="_blank">
               Repo <i class="bx bx-link-external"></i>
             </a>
           </div>
