--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <img src="assets/thumbnails/neowyze_challenge-screeshots-1.png" alt="Neowyze Challenge" />
         <div class="info">
           <h4>Neowyze Challenge</h4>
-          <p>Challenge for the "Frontend Developer Junior" job offer. This app is about Star Wars and its purpose is to make use of the Star Wars api, SWAPI, to make a glosary of the original 6 movies and its characters. Made with Next.JS and React.JS.</p>
+          <p>Challenge for the "Frontend Developer Junior" job offer for Neowyze. This app is about Star Wars and its purpose is to make use of the Star Wars api, SWAPI, to make a glosary of the original 6 movies and its characters. Made with Next.JS and React.JS.</p>
           <div class="info-links">
             <a href="https://ft-neowyze-challenge.vercel.app/" target="_blank">
               Deploy <i class="bx bx-link-external"></i>
