--- a/index.html
+++ b/index.html
@@ -149,6 +149,21 @@
     </div>
     <div class="projects-items">
       <div class="project">
+        <img src="assets/thumbnails/unclickablebutton_project-screenshots-1.png" alt="Neowyze Challenge" />
+        <div class="info">
+          <h4>Unclickable Button</h4>
+          <p>Just an innocent unclickable button made with HTML, CSS and Javascript. Part of my Mini-Projects collection.</p>
+          <div class="info-links">
+            <a href="https://ftunclickablebutton.vercel.app/" target="_blank">
+              Deploy <i class="bx bx-link-external"></i>
+            </a>
+            <a href="https://github.com/FacuTombesi/UnclickableButton" target="_blank">
+              Repo <i class="bx bx-link-external"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="project">
         <img src="assets/thumbnails/neowyze_challenge-screeshots-1.png" alt="Neowyze Challenge" />
         <div class="info">
           <h4>Neowyze Challenge</h4>
@@ -173,21 +188,6 @@
               Deploy <i class="bx bx-link-external"></i>
             </a>
             <a href="https://github.com/FacuTombesi/BudgetTracker" target="_blank">
-              Repo <i class="bx bx-link-external"></i>
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="project">
-        <img src="assets/thumbnails/weatherapp_project-screenshots-1.png" alt="Weather App" />
-        <div class="info">
-          <h4>Weather App</h4>
-          <p>Weather App with geolocation, daily forecasts and hourly temperatures. Weather information includes: current temperature, weather icon, max and min temperatures, wind speed and rain probability.</p>
-          <div class="info-links">
-            <a href="https://ftweatherapp.vercel.app/" target="_blank">
-              Deploy <i class="bx bx-link-external"></i>
-            </a>
-            <a href="https://github.com/FacuTombesi/WeatherApp" target="_blank">
               Repo <i class="bx bx-link-external"></i>
             </a>
           </div>
