--- a/pages/projects.html
+++ b/pages/projects.html
@@ -40,6 +40,21 @@
     </div>
     <div class="projects-items">
       <div class="project">
+        <img src="../assets/thumbnails/unclickablebutton_project-screenshots-1.png" alt="Neowyze Challenge" />
+        <div class="info">
+          <h4>Unclickable Button</h4>
+          <p>Just an innocent unclickable button made with HTML, CSS and Javascript. Part of my Mini-Projects collection.</p>
+          <div class="info-links">
+            <a href="https://ftunclickablebutton.vercel.app/" target="_blank">
+              Deploy <i class="bx bx-link-external"></i>
+            </a>
+            <a href="https://github.com/FacuTombesi/UnclickableButton" target="_blank">
+              Repo <i class="bx bx-link-external"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="project">
         <img src="../assets/thumbnails/neowyze_challenge-screeshots-1.png" alt="Neowyze Challenge" />
         <div class="info">
           <h4>Neowyze Challenge</h4>
