added category & tech used to each project / fixed styles

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <hr color="#5400CF" width="10%" />
         <div class="info-link">
           <a href="https://github.com/FacuTombesi?tab=repositories" target="_blank" rel="noreferrer">
-            All projects <i class="bx bx-link-external"></i>
+            GitHub <i class="bx bx-link-external"></i>
           </a>
         </div>
       </div>
@@ -151,6 +151,7 @@
       <div class="project">
         <img src="assets/thumbnails/unclickablebutton_project-screenshots-1.png" alt="Neowyze Challenge" />
         <div class="info">
+          <span>mini project</span>
           <h4>Unclickable Button</h4>
           <p>Just an innocent unclickable button made with HTML, CSS and Javascript. Part of my Mini-Projects collection.</p>
           <div class="info-links">
@@ -166,6 +167,7 @@
       <div class="project">
         <img src="assets/thumbnails/neowyze_challenge-screeshots-1.png" alt="Neowyze Challenge" />
         <div class="info">
+          <span>challenge</span>
           <h4>Neowyze Challenge</h4>
           <p>Challenge for the "Frontend Developer Junior" job offer for Neowyze. This app is about Star Wars and its purpose is to make use of the Star Wars api, SWAPI, to make a glosary of the original 6 movies and its characters. Made with Next.JS and React.JS.</p>
           <div class="info-links">
@@ -181,6 +183,7 @@
       <div class="project">
         <img src="assets/thumbnails/budgettracker_project-screenshots-1.png" alt="Budget Tracker" />
         <div class="info">
+          <span>mini project</span>
           <h4>Budget Tracker</h4>
           <p>Budget Tracker is an app where you can keep track of your budgets and expenses. You can create new budgets, add expenses to specific budgets, delete budgets and keep track of your total expenses.</p>
           <div class="info-links">
