--- a/pages/projects.html
+++ b/pages/projects.html
@@ -33,7 +33,7 @@
         <hr color="#5400CF" width="10%" />
         <div class="info-link">
           <a href="https://github.com/FacuTombesi" target="_blank" rel="noreferrer">
-            All projects <i class="bx bx-link-external"></i>
+            GitHub <i class="bx bx-link-external"></i>
           </a>
         </div>
       </div>
@@ -42,8 +42,14 @@
       <div class="project">
         <img src="../assets/thumbnails/unclickablebutton_project-screenshots-1.png" alt="Neowyze Challenge" />
         <div class="info">
+          <span>mini project</span>
           <h4>Unclickable Button</h4>
           <p>Just an innocent unclickable button made with HTML, CSS and Javascript. Part of my Mini-Projects collection.</p>
+          <ul>
+            <img src="../assets/icons/skillHTML_new.png" alt="HTML" />
+            <img src="../assets/icons/skillCSS_new.png" alt="CSS" />
+            <img src="../assets/icons/skillJAVASCRIPT_new.png" alt="JavaScript" />
+          </ul>
           <div class="info-links">
             <a href="https://ftunclickablebutton.vercel.app/" target="_blank">
               Deploy <i class="bx bx-link-external"></i>
@@ -57,8 +63,14 @@
       <div class="project">
         <img src="../assets/thumbnails/neowyze_challenge-screeshots-1.png" alt="Neowyze Challenge" />
         <div class="info">
+          <span>challenge</span>
           <h4>Neowyze Challenge</h4>
           <p>Challenge for the "Frontend Developer Junior" job offer for Neowyze. This app is about Star Wars and its purpose is to make use of the Star Wars api, SWAPI, to make a glosary of the original 6 movies and its characters. Made with Next.JS and React.JS.</p>
+          <ul>
+            <img src="../assets/icons/skillNEXTJS_new.png" alt="NextJs" />
+            <img src="../assets/icons/skillREACT_new.png" alt="ReactJs" />
+            <img src="../assets/icons/skillTAILWINDCSS_new.png" alt="TailwindCSS" />
+          </ul>
           <div class="info-links">
             <a href="https://ft-neowyze-challenge.vercel.app/" target="_blank">
               Deploy <i class="bx bx-link-external"></i>
@@ -72,8 +84,13 @@
       <div class="project">
         <img src="../assets/thumbnails/budgettracker_project-screenshots-1.png" alt="Budget Tracker" />
         <div class="info">
+          <span>mini project</span>
           <h4>Budget Tracker</h4>
           <p>Budget Tracker is an app where you can keep track of your budgets and expenses. You can create new budgets, add expenses to specific budgets, delete budgets and keep track of your total expenses.</p>
+          <ul>
+            <img src="../assets/icons/skillREACT_new.png" alt="ReactJs" />
+            <img src="../assets/icons/skillCSS_new.png" alt="CSS" />
+          </ul>
           <div class="info-links">
             <a href="https://ftbudgettracker.vercel.app/" target="_blank">
               Deploy <i class="bx bx-link-external"></i>
@@ -87,8 +104,14 @@
       <div class="project">
         <img src="../assets/thumbnails/weatherapp_project-screenshots-1.png" alt="Weather App" />
         <div class="info">
+          <span>mini project</span>
           <h4>Weather App</h4>
           <p>Weather App with geolocation, daily forecasts and hourly temperatures. Weather information includes: current temperature, weather icon, max and min temperatures, wind speed and rain probability.</p>
+          <ul>
+            <img src="../assets/icons/skillHTML_new.png" alt="HTML" />
+            <img src="../assets/icons/skillCSS_new.png" alt="CSS" />
+            <img src="../assets/icons/skillJAVASCRIPT_new.png" alt="JavaScript" />
+          </ul>
           <div class="info-links">
             <a href="https://ftweatherapp.vercel.app/" target="_blank">
               Deploy <i class="bx bx-link-external"></i>
@@ -102,8 +125,14 @@
       <div class="project">
         <img src="../assets/thumbnails/snakegame_project-screenshots-1.png" alt="Snake Game" />
         <div class="info">
+          <span>mini project</span>
           <h4>Snake Game</h4>
           <p>This is a project part of my Mini-Projects collection about the classic game Snake. This game was made entirely with JavaScript, HTML and CSS and all assets were made by me, including snake head and body, food, title image, favicon and even the background (I know it's horrible, I'm not an artist). The game features different difficulty levels, a score system and a quick restart button so you don't have to refresh the page.</p>
+          <ul>
+            <img src="../assets/icons/skillHTML_new.png" alt="HTML" />
+            <img src="../assets/icons/skillCSS_new.png" alt="CSS" />
+            <img src="../assets/icons/skillJAVASCRIPT_new.png" alt="JavaScript" />
+          </ul>
           <div class="info-links">
             <a href="https://ftsnakegame.vercel.app/" target="_blank">
               Deploy <i class="bx bx-link-external"></i>
@@ -117,8 +146,14 @@
       <div class="project">
         <img src="../assets/thumbnails/calculator_project-screenshots-1.png" alt="Calculator" />
         <div class="info">
+          <span>mini project</span>
           <h4>Calculator</h4>
           <p>This is a project part of my Mini-Projects collection, made with JavaScript, HTML and CSS. I made a simple calculator to practice JS logic and create complex functions for simple math operations.</p>
+          <ul>
+            <img src="../assets/icons/skillHTML_new.png" alt="HTML" />
+            <img src="../assets/icons/skillCSS_new.png" alt="CSS" />
+            <img src="../assets/icons/skillJAVASCRIPT_new.png" alt="JavaScript" />
+          </ul>
           <div class="info-links">
             <a href="https://ftcalculator.vercel.app/" target="_blank">
               Deploy <i class="bx bx-link-external"></i>
@@ -132,8 +167,18 @@
       <div class="project">
         <img src="../assets/thumbnails/voyhenry_pf-screenshots-1.png" alt="voyHenry" />
         <div class="info">
+          <span>group project</span>
           <h4>voyHENRY</h4>
           <p>Group project we made for the HENRY fullstack developer course. The project is a social app focused for HENRY students where they can create plans or social events to meet each other, get to know, do some co-working or just have fun.</p>
+          <ul>
+            <img src="../assets/icons/skillREACT_new.png" alt="ReactJs" />
+            <img src="../assets/icons/skillREDUX_new.png" alt="Redux" />
+            <img src="../assets/icons/skillNODEJS_new.png" alt="NodeJs" />
+            <img src="../assets/icons/skillEXPRESS_new.png" alt="ExpressJs" />
+            <img src="../assets/icons/skillSEQUELIZE_new.png" alt="Sequelize" />
+            <img src="../assets/icons/skillPOSTGRESQL_new.png" alt="PostgreSQL" />
+            <img src="../assets/icons/skillCSS_new.png" alt="CSS" />
+          </ul>
           <div class="info-links">
             <a href="https://pf-voy-henry.vercel.app/" target="_blank">
               Deploy <i class="bx bx-link-external"></i>
@@ -147,8 +192,18 @@
       <div class="project">
         <img src="../assets/thumbnails/food_pi-screenshots-1.png" alt="Food PI" />
         <div class="info">
+          <span>personal project</span>
           <h4>Food PI</h4>
           <p>Individual project for the HENRY fullstack developer course. The project is a recipe book where you can browse, filter and create your own recipes.</p>
+          <ul>
+            <img src="../assets/icons/skillREACT_new.png" alt="ReactJs" />
+            <img src="../assets/icons/skillREDUX_new.png" alt="Redux" />
+            <img src="../assets/icons/skillNODEJS_new.png" alt="NodeJs" />
+            <img src="../assets/icons/skillEXPRESS_new.png" alt="ExpressJs" />
+            <img src="../assets/icons/skillSEQUELIZE_new.png" alt="Sequelize" />
+            <img src="../assets/icons/skillPOSTGRESQL_new.png" alt="PostgreSQL" />
+            <img src="../assets/icons/skillCSS_new.png" alt="CSS" />
+          </ul>
           <div class="info-links">
             <a href="https://pi-food-ftombesi.vercel.app/" target="_blank">
               Deploy <i class="bx bx-link-external"></i>
