--- a/pages/projects.html
+++ b/pages/projects.html
@@ -46,9 +46,18 @@
           <h4>Unclickable Button</h4>
           <p>Just an innocent unclickable button made with HTML, CSS and Javascript. Part of my Mini-Projects collection.</p>
           <ul>
-            <img src="../assets/icons/skillHTML_new.png" alt="HTML" />
-            <img src="../assets/icons/skillCSS_new.png" alt="CSS" />
-            <img src="../assets/icons/skillJAVASCRIPT_new.png" alt="JavaScript" />
+            <div class="tech">
+              <img src="../assets/icons/skillHTML_new.png" alt="HTML" />
+              <p class="tech-name">HTML</p>
+            </div>
+            <div class="tech">
+              <img src="../assets/icons/skillCSS_new.png" alt="CSS" />
+              <p class="tech-name">CSS</p>
+            </div>
+            <div class="tech">
+              <img src="../assets/icons/skillJAVASCRIPT_new.png" alt="JavaScript" />
+              <p class="tech-name">JavaScript</p>
+            </div>
           </ul>
           <div class="info-links">
             <a href="https://ftunclickablebutton.vercel.app/" target="_blank">
@@ -67,9 +76,18 @@
           <h4>Neowyze Challenge</h4>
           <p>Challenge for the "Frontend Developer Junior" job offer for Neowyze. This app is about Star Wars and its purpose is to make use of the Star Wars api, SWAPI, to make a glosary of the original 6 movies and its characters. Made with Next.JS and React.JS.</p>
           <ul>
-            <img src="../assets/icons/skillNEXTJS_new.png" alt="NextJs" />
-            <img src="../assets/icons/skillREACT_new.png" alt="ReactJs" />
-            <img src="../assets/icons/skillTAILWINDCSS_new.png" alt="TailwindCSS" />
+            <div class="tech">
+              <img src="../assets/icons/skillNEXTJS_new.png" alt="NextJs" />
+              <p class="tech-name">NextJs</p>
+            </div>
+            <div class="tech">
+              <img src="../assets/icons/skillREACT_new.png" alt="ReactJs" />
+              <p class="tech-name">ReactJs</p>
+            </div>
+            <div class="tech">
+              <img src="../assets/icons/skillTAILWINDCSS_new.png" alt="TailwindCSS" />
+              <p class="tech-name">TailwindCSS</p>
+            </div>
           </ul>
           <div class="info-links">
             <a href="https://ft-neowyze-challenge.vercel.app/" target="_blank">
@@ -88,8 +106,14 @@
           <h4>Budget Tracker</h4>
           <p>Budget Tracker is an app where you can keep track of your budgets and expenses. You can create new budgets, add expenses to specific budgets, delete budgets and keep track of your total expenses.</p>
           <ul>
-            <img src="../assets/icons/skillREACT_new.png" alt="ReactJs" />
-            <img src="../assets/icons/skillCSS_new.png" alt="CSS" />
+            <div class="tech">
+              <img src="../assets/icons/skillREACT_new.png" alt="ReactJs" />
+              <p class="tech-name">ReactJs</p>
+            </div>
+            <div class="tech">
+              <img src="../assets/icons/skillCSS_new.png" alt="CSS" />
+              <p class="tech-name">CSS</p>
+            </div>
           </ul>
           <div class="info-links">
             <a href="https://ftbudgettracker.vercel.app/" target="_blank">
@@ -108,9 +132,18 @@
           <h4>Weather App</h4>
           <p>Weather App with geolocation, daily forecasts and hourly temperatures. Weather information includes: current temperature, weather icon, max and min temperatures, wind speed and rain probability.</p>
           <ul>
-            <img src="../assets/icons/skillHTML_new.png" alt="HTML" />
-            <img src="../assets/icons/skillCSS_new.png" alt="CSS" />
-            <img src="../assets/icons/skillJAVASCRIPT_new.png" alt="JavaScript" />
+            <div class="tech">
+              <img src="../assets/icons/skillHTML_new.png" alt="HTML" />
+              <p class="tech-name">HTML</p>
+            </div>
+            <div class="tech">
+              <img src="../assets/icons/skillCSS_new.png" alt="CSS" />
+              <p class="tech-name">CSS</p>
+            </div>
+            <div class="tech">
+              <img src="../assets/icons/skillJAVASCRIPT_new.png" alt="JavaScript" />
+              <p class="tech-name">JavaScript</p>
+            </div>
           </ul>
           <div class="info-links">
             <a href="https://ftweatherapp.vercel.app/" target="_blank">
@@ -129,9 +162,18 @@
           <h4>Snake Game</h4>
           <p>This is a project part of my Mini-Projects collection about the classic game Snake. This game was made entirely with JavaScript, HTML and CSS and all assets were made by me, including snake head and body, food, title image, favicon and even the background (I know it's horrible, I'm not an artist). The game features different difficulty levels, a score system and a quick restart button so you don't have to refresh the page.</p>
           <ul>
-            <img src="../assets/icons/skillHTML_new.png" alt="HTML" />
-            <img src="../assets/icons/skillCSS_new.png" alt="CSS" />
-            <img src="../assets/icons/skillJAVASCRIPT_new.png" alt="JavaScript" />
+            <div class="tech">
+              <img src="../assets/icons/skillHTML_new.png" alt="HTML" />
+              <p class="tech-name">HTML</p>
+            </div>
+            <div class="tech">
+              <img src="../assets/icons/skillCSS_new.png" alt="CSS" />
+              <p class="tech-name">CSS</p>
+            </div>
+            <div class="tech">
+              <img src="../assets/icons/skillJAVASCRIPT_new.png" alt="JavaScript" />
+              <p class="tech-name">JavaScript</p>
+            </div>
           </ul>
           <div class="info-links">
             <a href="https://ftsnakegame.vercel.app/" target="_blank">
@@ -150,9 +192,18 @@
           <h4>Calculator</h4>
           <p>This is a project part of my Mini-Projects collection, made with JavaScript, HTML and CSS. I made a simple calculator to practice JS logic and create complex functions for simple math operations.</p>
           <ul>
-            <img src="../assets/icons/skillHTML_new.png" alt="HTML" />
-            <img src="../assets/icons/skillCSS_new.png" alt="CSS" />
-            <img src="../assets/icons/skillJAVASCRIPT_new.png" alt="JavaScript" />
+            <div class="tech">
+              <img src="../assets/icons/skillHTML_new.png" alt="HTML" />
+              <p class="tech-name">HTML</p>
+            </div>
+            <div class="tech">
+              <img src="../assets/icons/skillCSS_new.png" alt="CSS" />
+              <p class="tech-name">CSS</p>
+            </div>
+            <div class="tech">
+              <img src="../assets/icons/skillJAVASCRIPT_new.png" alt="JavaScript" />
+              <p class="tech-name">JavaScript</p>
+            </div>
           </ul>
           <div class="info-links">
             <a href="https://ftcalculator.vercel.app/" target="_blank">
@@ -171,13 +222,34 @@
           <h4>voyHENRY</h4>
           <p>Group project we made for the HENRY fullstack developer course. The project is a social app focused for HENRY students where they can create plans or social events to meet each other, get to know, do some co-working or just have fun.</p>
           <ul>
-            <img src="../assets/icons/skillREACT_new.png" alt="ReactJs" />
-            <img src="../assets/icons/skillREDUX_new.png" alt="Redux" />
-            <img src="../assets/icons/skillNODEJS_new.png" alt="NodeJs" />
-            <img src="../assets/icons/skillEXPRESS_new.png" alt="ExpressJs" />
-            <img src="../assets/icons/skillSEQUELIZE_new.png" alt="Sequelize" />
-            <img src="../assets/icons/skillPOSTGRESQL_new.png" alt="PostgreSQL" />
-            <img src="../assets/icons/skillCSS_new.png" alt="CSS" />
+            <div class="tech">
+              <img src="../assets/icons/skillREACT_new.png" alt="ReactJs" />
+              <p class="tech-name">ReactJs</p>
+            </div>
+            <div class="tech">
+              <img src="../assets/icons/skillREDUX_new.png" alt="Redux" />
+              <p class="tech-name">Redux</p>
+            </div>
+            <div class="tech">
+              <img src="../assets/icons/skillNODEJS_new.png" alt="NodeJs" />
+              <p class="tech-name">NodeJs</p>
+            </div>
+            <div class="tech">
+              <img src="../assets/icons/skillEXPRESS_new.png" alt="ExpressJs" />
+              <p class="tech-name">ExpressJs</p>
+            </div>
+            <div class="tech">
+              <img src="../assets/icons/skillSEQUELIZE_new.png" alt="Sequelize" />
+              <p class="tech-name">Sequelize</p>
+            </div>
+            <div class="tech">
+              <img src="../assets/icons/skillPOSTGRESQL_new.png" alt="PostgreSQL" />
+              <p class="tech-name">PostgreSQL</p>
+            </div>
+            <div class="tech">
+              <img src="../assets/icons/skillCSS_new.png" alt="CSS" />
+              <p class="tech-name">CSS</p>
+            </div>
           </ul>
           <div class="info-links">
             <a href="https://pf-voy-henry.vercel.app/" target="_blank">
@@ -196,13 +268,34 @@
           <h4>Food PI</h4>
           <p>Individual project for the HENRY fullstack developer course. The project is a recipe book where you can browse, filter and create your own recipes.</p>
           <ul>
-            <img src="../assets/icons/skillREACT_new.png" alt="ReactJs" />
-            <img src="../assets/icons/skillREDUX_new.png" alt="Redux" />
-            <img src="../assets/icons/skillNODEJS_new.png" alt="NodeJs" />
-            <img src="../assets/icons/skillEXPRESS_new.png" alt="ExpressJs" />
-            <img src="../assets/icons/skillSEQUELIZE_new.png" alt="Sequelize" />
-            <img src="../assets/icons/skillPOSTGRESQL_new.png" alt="PostgreSQL" />
-            <img src="../assets/icons/skillCSS_new.png" alt="CSS" />
+            <div class="tech">
+              <img src="../assets/icons/skillREACT_new.png" alt="ReactJs" />
+              <p class="tech-name">ReactJs</p>
+            </div>
+            <div class="tech">
+              <img src="../assets/icons/skillREDUX_new.png" alt="Redux" />
+              <p class="tech-name">Redux</p>
+            </div>
+            <div class="tech">
+              <img src="../assets/icons/skillNODEJS_new.png" alt="NodeJs" />
+              <p class="tech-name">NodeJs</p>
+            </div>
+            <div class="tech">
+              <img src="../assets/icons/skillEXPRESS_new.png" alt="ExpressJs" />
+              <p class="tech-name">ExpressJs</p>
+            </div>
+            <div class="tech">
+              <img src="../assets/icons/skillSEQUELIZE_new.png" alt="Sequelize" />
+              <p class="tech-name">Sequelize</p>
+            </div>
+            <div class="tech">
+              <img src="../assets/icons/skillPOSTGRESQL_new.png" alt="PostgreSQL" />
+              <p class="tech-name">PostgreSQL</p>
+            </div>
+            <div class="tech">
+              <img src="../assets/icons/skillCSS_new.png" alt="CSS" />
+              <p class="tech-name">CSS</p>
+            </div>
           </ul>
           <div class="info-links">
             <a href="https://pi-food-ftombesi.vercel.app/" target="_blank">
