changed projects preview

--- a/index.html
+++ b/index.html
@@ -149,16 +149,16 @@
     </div>
     <div class="projects-items">
       <div class="project">
-        <img src="assets/thumbnails/unclickablebutton_project-screenshots-1.png" alt="Neowyze Challenge" />
+        <img src="assets/thumbnails/voyhenry_pf-screenshots-1.png" alt="voyHenry" />
         <div class="info">
-          <span>mini project</span>
-          <h4>Unclickable Button</h4>
-          <p>Just an innocent unclickable button made with HTML, CSS and Javascript. Part of my Mini-Projects collection.</p>
+          <span>group project</span>
+          <h4>voyHENRY</h4>
+          <p>Group project we made for the HENRY fullstack developer course. The project is a social app focused for HENRY students where they can create plans or social events to meet each other, get to know, do some co-working or just have fun.</p>
           <div class="info-links">
-            <a href="https://ftunclickablebutton.vercel.app/" target="_blank">
+            <a href="https://pf-voy-henry.vercel.app/" target="_blank">
               Deploy <i class="bx bx-link-external"></i>
             </a>
-            <a href="https://github.com/FacuTombesi/UnclickableButton" target="_blank">
+            <a href="https://github.com/Gbw699/PF-VoyHenry" target="_blank">
               Repo <i class="bx bx-link-external"></i>
             </a>
           </div>
