--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
   <div class="projects" id="projects">
     <div class="header">
       <div class="info">
-        <h5>&lt;latest_projects<span>/</span>&gt;</h5>
-        <hr color="#5400CF" width="10%" />
+        <h5>&lt;projects<span>/</span>&gt;</h5>
+        <hr color="#5400CF" width="5%" />
         <div class="info-link">
           <a href="https://github.com/FacuTombesi?tab=repositories" target="_blank" rel="noreferrer">
             GitHub <i class="bx bx-link-external"></i>
@@ -185,97 +185,93 @@
         </div>
       </div>
     </div>
-    <div class="projects-slider">
-      <button id="prevBtn" class="slider-btn">&#10094;</button>
-      <div class="projects-container">
-        <div class="projects-items">
-          <div class="project">
-            <img src="assets/thumbnails/voyhenry_pf-screenshots-1.png" alt="voyHenry" />
-            <div class="info">
-              <span>group project</span>
-              <h4>voyHENRY</h4>
-              <p>Group project for the HENRY fullstack developer bootcamp</p>
-              <div class="info-links">
-                <a href="https://pf-voy-henry.vercel.app/" target="_blank">Deploy</a>
-                <a href="https://github.com/Gbw699/PF-VoyHenry" target="_blank">Repo</a>
-              </div>
+    <div class="projects-container">
+      <div class="projects-items">
+        <div class="project">
+          <img src="assets/thumbnails/voyhenry_pf-screenshots-1.png" alt="voyHenry" />
+          <div class="info">
+            <span>group project</span>
+            <h4>voyHENRY</h4>
+            <p>Group project for the HENRY fullstack developer bootcamp</p>
+            <div class="info-links">
+              <a href="https://pf-voy-henry.vercel.app/" target="_blank">Deploy</a>
+              <a href="https://github.com/Gbw699/PF-VoyHenry" target="_blank">Repo</a>
             </div>
           </div>
-          <div class="project">
-            <img src="assets/thumbnails/neowyze_challenge-screeshots-1.png" alt="Neowyze Challenge" />
-            <div class="info">
-              <span>challenge</span>
-              <h4>Neowyze Challenge</h4>
-              <p>Technical Challenge</p>
-              <div class="info-links">
-                <a href="https://ft-neowyze-challenge.vercel.app/" target="_blank">Deploy</a>
-                <a href="https://github.com/FacuTombesi/neowyze-challenge" target="_blank">Repo</a>
-              </div>
+        </div>
+        <div class="project">
+          <img src="assets/thumbnails/neowyze_challenge-screeshots-1.png" alt="Neowyze Challenge" />
+          <div class="info">
+            <span>challenge</span>
+            <h4>Neowyze Challenge</h4>
+            <p>Technical Challenge</p>
+            <div class="info-links">
+              <a href="https://ft-neowyze-challenge.vercel.app/" target="_blank">Deploy</a>
+              <a href="https://github.com/FacuTombesi/neowyze-challenge" target="_blank">Repo</a>
             </div>
           </div>
-          <div class="project">
-            <img src="assets/thumbnails/budgettracker_project-screenshots-1.png" alt="Budget Tracker" />
-            <div class="info">
-              <span>mini project</span>
-              <h4>Budget Tracker</h4>
-              <p>Small finances management project</p>
-              <div class="info-links">
-                <a href="https://ftbudgettracker.vercel.app/" target="_blank">Deploy</a>
-                <a href="https://github.com/FacuTombesi/BudgetTracker" target="_blank">Repo</a>
-              </div>
+        </div>
+        <div class="project">
+          <img src="assets/thumbnails/budgettracker_project-screenshots-1.png" alt="Budget Tracker" />
+          <div class="info">
+            <span>mini project</span>
+            <h4>Budget Tracker</h4>
+            <p>Small finances management project</p>
+            <div class="info-links">
+              <a href="https://ftbudgettracker.vercel.app/" target="_blank">Deploy</a>
+              <a href="https://github.com/FacuTombesi/BudgetTracker" target="_blank">Repo</a>
             </div>
           </div>
-          <div class="project">
-            <img src="assets/thumbnails/weatherapp_project-screenshots-1.png" alt="Weather App" />
-            <div class="info">
-              <span>mini project</span>
-              <h4>Weather App</h4>
-              <p>Small weather forecast project</p>
-              <div class="info-links">
-                <a href="https://ftweatherapp.vercel.app/" target="_blank">Deploy</a>
-                <a href="https://github.com/FacuTombesi/WeatherApp" target="_blank">Repo</a>
-              </div>
+        </div>
+        <div class="project">
+          <img src="assets/thumbnails/weatherapp_project-screenshots-1.png" alt="Weather App" />
+          <div class="info">
+            <span>mini project</span>
+            <h4>Weather App</h4>
+            <p>Small weather forecast project</p>
+            <div class="info-links">
+              <a href="https://ftweatherapp.vercel.app/" target="_blank">Deploy</a>
+              <a href="https://github.com/FacuTombesi/WeatherApp" target="_blank">Repo</a>
             </div>
           </div>
-          <div class="project">
-            <img src="assets/thumbnails/snakegame_project-screenshots-1.png" alt="Snake Game" />
-            <div class="info">
-              <span>mini project</span>
-              <h4>Snake Game</h4>
-              <p>Classic snake game made with JavaScript</p>
-              <div class="info-links">
-                <a href="https://ftsnakegame.vercel.app/" target="_blank">Deploy</a>
-                <a href="https://github.com/FacuTombesi/SnakeGame" target="_blank">Repo</a>
-              </div>
+        </div>
+        <div class="project">
+          <img src="assets/thumbnails/snakegame_project-screenshots-1.png" alt="Snake Game" />
+          <div class="info">
+            <span>mini project</span>
+            <h4>Snake Game</h4>
+            <p>Classic snake game made with JavaScript</p>
+            <div class="info-links">
+              <a href="https://ftsnakegame.vercel.app/" target="_blank">Deploy</a>
+              <a href="https://github.com/FacuTombesi/SnakeGame" target="_blank">Repo</a>
             </div>
           </div>
-          <div class="project">
-            <img src="assets/thumbnails/calculator_project-screenshots-1.png" alt="Calculator" />
-            <div class="info">
-              <span>mini project</span>
-              <h4>Calculator</h4>
-              <p>Simple calculator made with JavaScript</p>
-              <div class="info-links">
-                <a href="https://ftcalculator.vercel.app/" target="_blank">Deploy</a>
-                <a href="https://github.com/FacuTombesi/Calculator" target="_blank">Repo</a>
-              </div>
+        </div>
+        <div class="project">
+          <img src="assets/thumbnails/calculator_project-screenshots-1.png" alt="Calculator" />
+          <div class="info">
+            <span>mini project</span>
+            <h4>Calculator</h4>
+            <p>Simple calculator made with JavaScript</p>
+            <div class="info-links">
+              <a href="https://ftcalculator.vercel.app/" target="_blank">Deploy</a>
+              <a href="https://github.com/FacuTombesi/Calculator" target="_blank">Repo</a>
             </div>
           </div>
-          <div class="project">
-            <img src="assets/thumbnails/food_pi-screenshots-1.png" alt="Food PI" />
-            <div class="info">
-              <span>personal project</span>
-              <h4>Food PI</h4>
-              <p>Individual project for the HENRY fullstack developer bootcamp</p>
-              <div class="info-links">
-                <a href="https://pi-food-ftombesi.vercel.app/" target="_blank">Deploy</a>
-                <a href="https://github.com/FacuTombesi/PI-Food" target="_blank">Repo</a>
-              </div>
+        </div>
+        <div class="project">
+          <img src="assets/thumbnails/food_pi-screenshots-1.png" alt="Food PI" />
+          <div class="info">
+            <span>personal project</span>
+            <h4>Food PI</h4>
+            <p>Individual project for the HENRY fullstack developer bootcamp</p>
+            <div class="info-links">
+              <a href="https://pi-food-ftombesi.vercel.app/" target="_blank">Deploy</a>
+              <a href="https://github.com/FacuTombesi/PI-Food" target="_blank">Repo</a>
             </div>
           </div>
         </div>
       </div>
-      <button id="nextBtn" class="slider-btn">&#10095;</button>
     </div>
   </div>
   <div class="contact" id="contact">
